[gd_scene load_steps=83 format=2]

[ext_resource path="res://UI/HP_Bar_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Boss/Boss.gd" type="Script" id=2]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att2.png" type="Texture" id=3]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att4.png" type="Texture" id=4]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att7.png" type="Texture" id=5]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att3.png" type="Texture" id=6]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att5.png" type="Texture" id=7]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att9.png" type="Texture" id=8]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead41.png" type="Texture" id=9]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead34.png" type="Texture" id=10]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead39.png" type="Texture" id=11]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att6.png" type="Texture" id=12]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att8.png" type="Texture" id=13]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead36.png" type="Texture" id=14]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead42.png" type="Texture" id=15]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead38.png" type="Texture" id=16]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead40.png" type="Texture" id=17]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead35.png" type="Texture" id=18]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead37.png" type="Texture" id=19]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att1.png" type="Texture" id=20]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att11.png" type="Texture" id=21]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att18.png" type="Texture" id=22]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att19.png" type="Texture" id=23]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att14.png" type="Texture" id=24]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att10.png" type="Texture" id=25]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att13.png" type="Texture" id=26]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att16.png" type="Texture" id=27]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att17.png" type="Texture" id=28]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att15.png" type="Texture" id=29]
[ext_resource path="res://Boss/anim/Boss Attack/Boss Throw att12.png" type="Texture" id=30]
[ext_resource path="res://Boss/anim/Boss Hit/Ani Boss Hit2.png" type="Texture" id=31]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead1.png" type="Texture" id=32]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead2.png" type="Texture" id=33]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead3.png" type="Texture" id=34]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead8.png" type="Texture" id=35]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead4.png" type="Texture" id=36]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead10.png" type="Texture" id=37]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead9.png" type="Texture" id=38]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead12.png" type="Texture" id=39]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead14.png" type="Texture" id=40]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead13.png" type="Texture" id=41]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead16.png" type="Texture" id=42]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead15.png" type="Texture" id=43]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead11.png" type="Texture" id=44]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead7.png" type="Texture" id=45]
[ext_resource path="res://Boss/anim/idle/Ani Boss Idle1.png" type="Texture" id=46]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead18.png" type="Texture" id=47]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead20.png" type="Texture" id=48]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead21.png" type="Texture" id=49]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead17.png" type="Texture" id=50]
[ext_resource path="res://Boss/anim/idle/Ani Boss Idle2.png" type="Texture" id=51]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead19.png" type="Texture" id=52]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead22.png" type="Texture" id=53]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead23.png" type="Texture" id=54]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead24.png" type="Texture" id=55]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead25.png" type="Texture" id=56]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead26.png" type="Texture" id=57]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead29.png" type="Texture" id=58]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead30.png" type="Texture" id=59]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead31.png" type="Texture" id=60]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead28.png" type="Texture" id=61]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead27.png" type="Texture" id=62]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead32.png" type="Texture" id=63]
[ext_resource path="res://Boss/anim/Boss Hit/Ani Boss Idle1.png" type="Texture" id=64]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead33.png" type="Texture" id=65]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead5.png" type="Texture" id=66]
[ext_resource path="res://Boss/anim/Boss Dead/Ani Boss Dead6.png" type="Texture" id=67]
[ext_resource path="res://Boss/anim/spread/Boss Big throw2.png" type="Texture" id=68]
[ext_resource path="res://Boss/anim/spread/Boss Big throw5.png" type="Texture" id=69]
[ext_resource path="res://Boss/anim/spread/Boss Big throw7.png" type="Texture" id=70]
[ext_resource path="res://Boss/anim/spread/Boss Big throw9.png" type="Texture" id=71]
[ext_resource path="res://Boss/anim/spread/Boss Big throw1.png" type="Texture" id=72]
[ext_resource path="res://Boss/anim/spread/Boss Big throw3.png" type="Texture" id=73]
[ext_resource path="res://Boss/anim/spread/Boss Big throw10.png" type="Texture" id=74]
[ext_resource path="res://Boss/anim/spread/Boss Big throw4.png" type="Texture" id=75]
[ext_resource path="res://Boss/anim/spread/Boss Big throw6.png" type="Texture" id=76]
[ext_resource path="res://Boss/anim/spread/Boss Big throw8.png" type="Texture" id=77]
[ext_resource path="res://Audio/SFX/Serangan satu.wav" type="AudioStream" id=78]
[ext_resource path="res://Audio/SFX/Sid - Serangan Akeh 2024-05-28 20_17.wav" type="AudioStream" id=79]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 45 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 44 ), ExtResource( 39 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 50 ), ExtResource( 47 ), ExtResource( 52 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 62 ), ExtResource( 61 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 63 ), ExtResource( 65 ), ExtResource( 10 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 15 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 64 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 51 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "shot",
"speed": 10.0
}, {
"frames": [ ExtResource( 72 ), ExtResource( 68 ), ExtResource( 73 ), ExtResource( 75 ), ExtResource( 69 ), ExtResource( 76 ), ExtResource( 70 ), ExtResource( 77 ), ExtResource( 71 ), ExtResource( 74 ) ],
"loop": true,
"name": "spread",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 78.0
height = 116.0

[sub_resource type="CircleShape2D" id=2]
radius = 1228.47

[node name="Boss" type="KinematicBody2D"]
position = Vector2( 843, 331 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "spread"
frame = 4
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( 0, 11 )
shape = SubResource( 1 )

[node name="DetectionZone" type="Area2D" parent="."]
visible = false
position = Vector2( 1, -7 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2( 12, 3 )
shape = SubResource( 2 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( -90.0001, 7 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( -127, 8 )

[node name="layer" type="CanvasLayer" parent="."]

[node name="HPBar" type="ProgressBar" parent="layer"]
margin_left = 299.0
margin_top = 12.0
margin_right = 429.0
margin_bottom = 33.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 1 )
value = 10.0

[node name="spred" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 79 )
bus = "SFX"

[node name="single" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 78 )
bus = "SFX"

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
